--- a/server/views/base.tmpl
+++ b/server/views/base.tmpl
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>{{state.title}}</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     {{html}}
